Update gitignore for django

--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world! Shop</title>
   </head>
   <body>
-    <h1>Hello, world! Shop</h1>
+    <h1>Hello, world! Shop 1</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
