--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,27 +1,70 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'shop/basic.html' %}
+{% block title %}Home{% endblock title %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% block style %}
+.prod-img{
+  height: 200px;
+  width: 300px;
+}
 
-    <title>Hello, world! Shop</title>
-  </head>
-  <body>
-    <h1>Hello, world! Shop 1</h1>
+{% endblock style %}
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+{% block body %}
+<!--Carousel -->
+{% load static %}
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+<!--Card View-->
+<div class="container">
+{% for products, range, nSlides in allProducts %}
+<h2>{{products.0.category}}</h2>
+<div id="carouselExampleIndicators" class="carousel slide carousel-dark" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 0"></button>
+    {% for i in range %}
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{i}}" aria-label="Slide {{i}}"></button>
+    {% endfor %}
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="row">
+        <div class="card" style="width: 18rem;">
+          <img src="/media/{{products.0.image}}" class="card-img-top prod-img" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{products.0.product_name}}</h5>
+            <p class="card-text">{{products.0.desc}}</p>
+            <a href="#" class="btn btn-outline-dark">Add to cart</a>
+          </div>
+        </div>
+
+        {% for i in products|slice:'1:' %}
+        <div class="card" style="width: 18rem;">
+          <img src="/media/{{i.image}}" class="card-img-top prod-img" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">{{i.product_name}}</h5>
+            <p class="card-text">{{i.desc}}</p>
+            <a href="#" class="btn btn-outline-dark">Add to cart</a>
+          </div>
+        </div>
+        {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %} 
+        </div>
+    </div>
+    <div class="carousel-item">
+      <div class="row">
+        {% endif %}
+        {% endfor %}
+  </div>
+</div>
+</div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+{% endfor %}
+</div>
+{% endblock body %}
